use switch syntax for matrix blocks, populate sidebar filters for impact/expertise, add template for single service page, list services & locations on approach index template; expertise landing page template with header, pagination, and pulling all related project entries; single impact template with filters and related impact posts by category or latest; impact landing page template with featured impact; people landing page & category templates; listing & single project templates with services

--- a/templates/approach/index.html
+++ b/templates/approach/index.html
@@ -3,6 +3,22 @@
 {% block content %}
   {% cache unless currentUser %}
 
+  <h3>Services</h3>
+  {{ entry.servicesDescription }}
+  {% for cat in craft.categories.group('services').all() %}
+    <li>
+      <a href="{{ cat.url }}">{{ cat.title }}</a>
+    </li>
+  {% endfor %}
+
+  <h3>Locations</h3>
+  {{ entry.locationsDescription }}
+  {% for entry in craft.entries.section('offices').all() %}
+    <li>
+      <a href="{{ entry.url }}">{{ entry.title }}</a>
+    </li>
+  {% endfor %}
+
 
   {% endcache %}
 {% endblock %}
