--- a/templates/impact/_entry.html
+++ b/templates/impact/_entry.html
@@ -4,8 +4,8 @@
   <li class="filters-item">
     <a href="/impact/">All</a>
   </li>
-  {% set entryImpactIds = entry.impactType.ids() %}
-  {% for cat in craft.categories.group('impactType').all() %}
+  {% set entryImpactIds = entry.impactTypes.ids() %}
+  {% for cat in craft.categories.group('impactTypes').all() %}
     <li class="filters-item {% if cat.id in entryImpactIds %}current{% endif %}">
       <a href="{{ cat.url }}">{{ cat.title }}</a>
     </li>
@@ -13,24 +13,21 @@
 {% endblock %}
 
 {% block content %}
-  {% cache unless currentUser %}
-
   {{ entry.title }}
 
   <h3>Related Impact</h3>
   {% set limitCriteria = craft.entries.section('impact').limit(2) %}
-  {% set relatedImpactEntries = craft.similar.find({ element: entry, context: entry.impactType, criteria: limitCriteria }) %}
+  {% set relatedImpactEntries = craft.similar.find({ element: entry, context: entry.impactTypes, criteria: limitCriteria }) %}
   <ul>
     {% for relatedImpact in relatedImpactEntries %}
       <li>{{ relatedImpact.title }}</li>
     {% endfor %}
     {% if relatedImpactEntries|length < 2 %}
       {% set omitId = relatedImpactEntries|length == 1 ? relatedImpactEntries[0].id : 0 %}
-      {% for relatedImpact in craft.entries.section('impact').id('not ' ~ omitId).limit(2 - relatedImpactEntries|length) %}
+      {% for relatedImpact in craft.entries.section('impact').id('not ' ~ omitId).limit(2 - relatedImpactEntries|length).all() %}
         <li>{{ relatedImpact.title }}</li>
       {% endfor %}
     {% endif %}
   </ul>
 
-  {% endcache %}
 {% endblock %}
