typo, link to test post

--- a/templates/impact/_entry.html
+++ b/templates/impact/_entry.html
@@ -4,8 +4,8 @@
   <li class="filters-item">
     <a href="/impact/">All</a>
   </li>
-  {% set entryImpactIds = entry.impactTypes.ids() %}
-  {% for cat in craft.categories.group('impactTypes').all() %}
+  {% set entryImpactIds = entry.impactType.ids() %}
+  {% for cat in craft.categories.group('impactType').all() %}
     <li class="filters-item {% if cat.id in entryImpactIds %}current{% endif %}">
       <a href="{{ cat.url }}">{{ cat.title }}</a>
     </li>
@@ -17,15 +17,15 @@
 
   <h3>Related Impact</h3>
   {% set limitCriteria = craft.entries.section('impact').limit(2) %}
-  {% set relatedImpactEntries = craft.similar.find({ element: entry, context: entry.impactTypes, criteria: limitCriteria }) %}
+  {% set relatedImpactEntries = craft.similar.find({ element: entry, context: entry.impactType, criteria: limitCriteria }) %}
   <ul>
     {% for relatedImpact in relatedImpactEntries %}
-      <li>{{ relatedImpact.title }}</li>
+      <li><a href="{{ relatedImpact.url() }}">{{ relatedImpact.title }}</a></li>
     {% endfor %}
     {% if relatedImpactEntries|length < 2 %}
       {% set omitId = relatedImpactEntries|length == 1 ? relatedImpactEntries[0].id : 0 %}
       {% for relatedImpact in craft.entries.section('impact').id('not ' ~ omitId).limit(2 - relatedImpactEntries|length).all() %}
-        <li>{{ relatedImpact.title }}</li>
+        <li><a href="{{ relatedImpact.url() }}">{{ relatedImpact.title }}</a></li>
       {% endfor %}
     {% endif %}
   </ul>
