update methods for first() and last()

--- a/templates/partials/_pagination_structure.html
+++ b/templates/partials/_pagination_structure.html
@@ -1,11 +1,11 @@
   {# Pagination for Structure sections #}
   {% set prevEntry = craft.entries.section(paginationSection).positionedBefore(entry).orderBy('lft desc').one() %}
   {% if not prevEntry %}
-    {% set prevEntry = craft.entries.section(paginationSection).last() %}
+    {% set prevEntry = craft.entries.section(paginationSection).inReverse().one() %}
   {% endif %}
   {% set nextEntry = craft.entries.section(paginationSection).positionedAfter(entry).orderBy('lft asc').one() %}
   {% if not nextEntry %}
-    {% set nextEntry = craft.entries.section(paginationSection).first() %}
+    {% set nextEntry = craft.entries.section(paginationSection).one() %}
   {% endif %}
   <nav class="footer-pagination">
     <ul>
