--- a/web/assets/scss/helpers/_animations.scss
+++ b/web/assets/scss/helpers/_animations.scss
@@ -1,1 +1,44 @@
 // Animations
+
+.zoom-hover {
+  .image-wrap {
+    overflow: hidden;
+  }
+  .image {
+    transition: transform 3s $ease;
+  }
+
+  &:hover {
+    .image {
+      transform: scale(1.05);
+    }
+  }
+}
+
+
+@keyframes right-arrow-hover {
+  0% {
+    opacity: 0;
+    transform: translateX(-150px);
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: none;
+  }
+}
+
+
+@keyframes left-arrow-hover {
+  0% {
+    opacity: 0;
+    transform: translateX(150px);
+  }
+  70% {
+    opacity: 1;
+  }
+  100% {
+    transform: none;
+  }
+}
