--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -10,7 +10,7 @@
       </ul>
   </div>
   </div>
-  <div class="copyright footer-block">&copy;{{ "now"|date("Y") }} {{ siteName }}</div>
+  <div class="copyright footer-block">&copy;{{ "now"|date("Y") }} Affiliated Engineers, Inc.</div>
 </footer>
 
 <script src="{{ rev('js/site.js') }}"></script>
